# py-tree-sitter-rst

./: .gitignore  .gitmodules  before_build.sh  pyproject.toml  rebuild.py  setup.py
.github/workflows/: build_wheels.yml
tests/: test_core.py
tree_sitter_rst/: __init__.py  core.py
