[project]
requires-python = ">=3.6"

[build-system]
requires = ["setuptools","tree_sitter","wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = ""#"pytest --pyargs tree_sitter_rst"
before-build = [
    "ls tree-sitter-rst",
    "git submodule update --init",
    "ls tree-sitter-rst",
    "python -m pip install tree_sitter",
    "python rebuild.py",
]

repair-wheel-command = ""

[tool.cibuildwheel.linux]
repair-wheel-command = "mv {wheel} {dest_dir}"
